fix(bugs): Se arreglo un bug visual de un z-index.

--- a/src/css/explorarPage.css
+++ b/src/css/explorarPage.css
@@ -620,7 +620,7 @@
         animation: showing 0.5s ease-in forwards;
 
         &:hover {
-          z-index: 1000;
+          z-index: 1;
           transform: translateY(-10px);
         }
 
